--- a/StepTrackerAndroidApp/app/src/main/res/layout/fragment_f_r__trang_chu.xml
+++ b/StepTrackerAndroidApp/app/src/main/res/layout/fragment_f_r__trang_chu.xml
@@ -38,7 +38,7 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="180dp"
-        android:text="0"
+        android:text="10"
         android:textColor="@color/white"
         android:textSize="30dp"
         android:textStyle="bold" />
@@ -49,18 +49,30 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/tv_sobuoc"
         android:layout_centerHorizontal="true"
-        android:text="0"
+        android:text="10"
         android:textColor="@color/white"
         android:textSize="30dp"
         android:textStyle="bold" />
+
+    <Button
+        android:id="@+id/btn_hoantac"
+        android:layout_width="wrap_content"
+        android:layout_height="60dp"
+        android:layout_below="@+id/img_circle_yellow"
+        android:layout_marginLeft="90dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="10dp"
+        android:backgroundTint="@color/blue_for_button"
+        android:text="Hoàn tác" />
 
     <Button
         android:id="@+id/btn_luu"
         android:layout_width="wrap_content"
         android:layout_height="60dp"
         android:layout_below="@+id/img_circle_yellow"
-        android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
+        android:layout_toRightOf="@+id/btn_hoantac"
         android:backgroundTint="@color/green_for_button"
         android:text="Lưu" />
 
@@ -69,7 +81,7 @@
         android:id="@+id/tv_quangduong"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/btn_luu"
+        android:layout_below="@+id/btn_hoantac"
         android:layout_centerHorizontal="true"
         android:layout_marginStart="10dp"
         android:layout_marginLeft="155dp"
@@ -92,7 +104,7 @@
         android:id="@+id/tv_km"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/btn_luu"
+        android:layout_below="@+id/btn_hoantac"
         android:layout_centerVertical="true"
         android:layout_marginTop="70dp"
         android:layout_toRightOf="@+id/tv_quangduong"
@@ -105,7 +117,7 @@
         android:id="@+id/img_distance_icon"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:layout_below="@id/btn_luu"
+        android:layout_below="@id/btn_hoantac"
         android:layout_marginLeft="100dp"
         android:layout_marginTop="70dp"
         android:padding="6dp"
